# mlzoomcamp-capstone-project

./: .dockerignore  Dockerfile  README.md  main.py  predict.py  pyproject.toml  train.py
k8s/: deployment.yaml  service.yaml
models/: metadata.json
notebooks/: EDA.ipynb
